Add 3 sections into sumobot page

--- a/website/sumobot.html
+++ b/website/sumobot.html
@@ -42,7 +42,6 @@ layout: default
   <a href="#sumobot-point-2" class="button style2 down anchored">Next</a>
 </section>
 
-<!-- Two -->
 <section id="sumobot-point-2" class="main style2 left dark fullscreen">
   <div class="content box style2">
     <header>
@@ -53,108 +52,56 @@ layout: default
       Competition. Our little sumo wrestlers are a force to be reckoned with!
     </p>
   </div>
-  <!-- <a href="#sumobot-point3" class="button style2 down anchored">Next</a> -->
 </section>
 
-<!-- <section id="sumobot-pont-3" class="main style2 right dark fullscreen">
+<section id="sumobot-point-3" class="main style2 right dark fullscreen">
   <div class="content box style2">
     <header>
-      <h2>Point 3</h2>
+      <h2>Programming! print("Hello, World?")</h2>
     </header>
     <p>
-      Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-      condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus eu.
-      Sed sodales venenatis arcu, id varius justo euismod in. Curabitur egestas
-      consectetur magna.
+      To power these little cute robots into the champions that they will be
+      during the competition, we need to give their microporcessors instructions
+      to follow. With the power of Arudino C, they shall gains the brains to win
+      the competition.
+    </p>
+    <p>
+      <a href="{{ site.join_now_link }}">Join us now</a> to gives these little
+      bots the brains of Skynet (disguised in the body of a cute bot).
     </p>
   </div>
-</section> -->
+</section>
 
-<!-- Work -->
-<!-- <section id="work" class="main style3 primary">
-      <div class="content">
-        <header>
-          <h2>My Work</h2>
-          <p>
-            Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-            condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus
-            eu. Sed sodales venenatis arcu, id varius justo euismod in.
-            Curabitur egestas consectetur magna vitae.
-          </p>
-        </header> -->
+<section id="sumobot-point-4" class="main style2 left dark fullscreen">
+  <div class="content box style2">
+    <header>
+      <h2>Circuits! Circuit of life!</h2>
+    </header>
+    <p>These little cutie bots need their circuits completed.</p>
 
-<!-- Gallery  -->
-<!-- <div class="gallery">
-          <article class="from-left">
-            <a href="images/fulls/01.jpg" class="image fit"
-              ><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt=""
-            /></a>
-          </article>
-          <article class="from-right">
-            <a href="images/fulls/02.jpg" class="image fit"
-              ><img src="images/thumbs/02.jpg" title="Airchitecture II" alt=""
-            /></a>
-          </article>
-          <article class="from-left">
-            <a href="images/fulls/03.jpg" class="image fit"
-              ><img src="images/thumbs/03.jpg" title="Air Lounge" alt=""
-            /></a>
-          </article>
-          <article class="from-right">
-            <a href="images/fulls/04.jpg" class="image fit"
-              ><img src="images/thumbs/04.jpg" title="Carry on" alt=""
-            /></a>
-          </article>
-          <article class="from-left">
-            <a href="images/fulls/05.jpg" class="image fit"
-              ><img
-                src="images/thumbs/05.jpg"
-                title="The sparkling shell"
-                alt=""
-            /></a>
-          </article>
-          <article class="from-right">
-            <a href="images/fulls/06.jpg" class="image fit"
-              ><img src="images/thumbs/06.jpg" title="Bent IX" alt=""
-            /></a>
-          </article>
-        </div>
-      </div>
-    </section> -->
+    <p>
+      <a href="{{ site.join_now_link }}">Join us now</a> and hook these
+      disguised cutie bots into their Frankenstein potential!
+      <strong>IT'S ALIVE!</strong>
+    </p>
+  </div>
+</section>
 
-<!-- Contact -->
-<!-- <section id="contact" class="main style3 secondary">
-      <div class="content">
-        <header>
-          <h2>Say Hello.</h2>
-          <p>
-            Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-            condimentum.
-          </p>
-        </header>
-        <div class="box">
-          <form method="post" action="#">
-            <div class="fields">
-              <div class="field half">
-                <input type="text" name="name" placeholder="Name" />
-              </div>
-              <div class="field half">
-                <input type="email" name="email" placeholder="Email" />
-              </div>
-              <div class="field">
-                <textarea
-                  name="message"
-                  placeholder="Message"
-                  rows="6"
-                ></textarea>
-              </div>
-            </div>
-            <ul class="actions special">
-              <li><input type="submit" value="Send Message" /></li>
-            </ul>
-          </form>
-        </div>
-      </div>
-    </section> -->
+<section id="sumobot-point-5" class="main style2 right dark fullscreen">
+  <div class="content box style2">
+    <header>
+      <h2>CAD Modeling and 3D Printing.</h2>
+    </header>
+    <p>
+      Model the next cutie bot or if you wish, model the next killer cutie bot.
+      With the power of AutoCAD on one side, and 3D printing on the other, they
+      shall support your journey into the realm of cutie bots modeling (and
+      printing).
+    </p>
 
-<!-- Footer -->
+    <p>
+      <a href="{{ site.join_now_link }}">Join us now</a> to build your next
+      <i>cutie</i> terminator bot.
+    </p>
+  </div>
+</section>
