--- a/website/sumobot.html
+++ b/website/sumobot.html
@@ -52,6 +52,7 @@ layout: default
       Competition. Our little sumo wrestlers are a force to be reckoned with!
     </p>
   </div>
+  <a href="#sumobot-point-3" class="button style2 down anchored">Next</a>
 </section>
 
 <section id="sumobot-point-3" class="main style2 right dark fullscreen">
@@ -70,6 +71,7 @@ layout: default
       bots the brains of Skynet (disguised in the body of a cute bot).
     </p>
   </div>
+  <a href="#sumobot-point-4" class="button style2 down anchored">Next</a>
 </section>
 
 <section id="sumobot-point-4" class="main style2 left dark fullscreen">
@@ -85,6 +87,7 @@ layout: default
       <strong>IT'S ALIVE!</strong>
     </p>
   </div>
+  <a href="#sumobot-point-5" class="button style2 down anchored">Next</a>
 </section>
 
 <section id="sumobot-point-5" class="main style2 right dark fullscreen">
