deploy: caf6e4cc41b55818d01136e1f1bc9a4df6ef968c

--- a/sumobot.html
+++ b/sumobot.html
@@ -102,6 +102,7 @@
       Competition. Our little sumo wrestlers are a force to be reckoned with!
     </p>
   </div>
+  <a href="#sumobot-point-3" class="button style2 down anchored">Next</a>
 </section>
 
 <section id="sumobot-point-3" class="main style2 right dark fullscreen">
@@ -120,6 +121,7 @@
       bots the brains of Skynet (disguised in the body of a cute bot).
     </p>
   </div>
+  <a href="#sumobot-point-4" class="button style2 down anchored">Next</a>
 </section>
 
 <section id="sumobot-point-4" class="main style2 left dark fullscreen">
@@ -135,6 +137,7 @@
       <strong>IT'S ALIVE!</strong>
     </p>
   </div>
+  <a href="#sumobot-point-5" class="button style2 down anchored">Next</a>
 </section>
 
 <section id="sumobot-point-5" class="main style2 right dark fullscreen">
