--- a/sumobot.html
+++ b/sumobot.html
@@ -61,9 +61,9 @@
       <h2>SUMOBOT TEAM</h2>
     </header>
     <p>
-      What can be cuter than two little autonomous robots trying to push each
-      other out of the ring? Come
-      <a href="/join">join us now</a> and find out!
+      Never worked with robots before? Don't know how to get started? Rover Team is a bit daunting?
+      This might be the right place! Come
+      <a href="/join">join us now</a> and find out how to build your first (or second) robot!
     </p>
     <footer>
       <a href="#sumobot-point-1" class="button style2 down">More</a>
@@ -78,7 +78,7 @@
       <h2>Everyone's Welcome!</h2>
     </header>
     <p>
-      The Sumobot team engineers small, autonomous robots designed to track down
+      The Sumobot team engineer small, autonomous robots designed to track down
       and push an opposing robot out of a ring. Competing in the annual McMaster
       Sumobot Competition, the Sumobot Team is a great place to work in a
       close-knit team to build up your skills in all areas of robotics. The team
@@ -95,7 +95,7 @@
 <section id="sumobot-point-2" class="main style2 left dark fullscreen">
   <div class="content box style2">
     <header>
-      <h2>Winner Winner Chicken Dinner!</h2>
+      <h2>Winner Winner!</h2>
     </header>
     <p>
       In 2018, York University earned first place at the McMaster Sumobot
@@ -108,17 +108,18 @@
 <section id="sumobot-point-3" class="main style2 right dark fullscreen">
   <div class="content box style2">
     <header>
-      <h2>Programming! print("Hello, World?")</h2>
+      <h2>Programming With Arduinos!</h2>
     </header>
     <p>
       To power these little cute robots into the champions that they will be
       during the competition, we need to give their microporcessors instructions
       to follow. With the power of Arudino C, they shall gains the brains to win
-      the competition.
+      the competition. Never programmed? Don't worry, our workshops are designed to 
+      get you started from nothing!
     </p>
     <p>
       <a href="/join">Join us now</a> to gives these little
-      bots the brains of Skynet (disguised in the body of a cute bot).
+      bots the brains of Skynet (disguised in the body of a tiny bot).
     </p>
   </div>
   <a href="#sumobot-point-4" class="button style2 down anchored">Next</a>
@@ -129,11 +130,17 @@
     <header>
       <h2>Circuits! Circuit of life!</h2>
     </header>
-    <p>These little cutie bots need their circuits completed.</p>
+    <p>
+      These little bots are centered around their simple circuit design.
+      We already have a basic circuit laid out for you that you can 
+      modify to your liking! Want more/differnt sensors? Another motor 
+      for an arm? You can do it!
+    
+    </p>
 
     <p>
-      <a href="/join">Join us now</a> and hook these
-      disguised cutie bots into their Frankenstein potential!
+      <a href="/join">Join us now</a> and hook up these 
+      bots into their Frankenstein potential!
       <strong>IT'S ALIVE!</strong>
     </p>
   </div>
@@ -146,15 +153,15 @@
       <h2>CAD Modeling and 3D Printing.</h2>
     </header>
     <p>
-      Model the next cutie bot or if you wish, model the next killer cutie bot.
-      With the power of AutoCAD on one side, and 3D printing on the other, they
-      shall support your journey into the realm of cutie bots modeling (and
-      printing).
+      Once you got your bot spinning it's wheels, how do you hold it all together? 
+      You got to design your own enclosure using CAD! Some of our workshops will be 
+      dedicated to learning Fusion 360 and the quirks of 3D printing. Once it's all 
+      done we will 3D print the parts for you so you can asseemble your bot.
     </p>
 
     <p>
       <a href="/join">Join us now</a> to build your next
-      <i>cutie</i> terminator bot.
+      <i>tiny</i> terrorizing bot.
     </p>
   </div>
 </section>
