--- a/website/sumobot.html
+++ b/website/sumobot.html
@@ -83,7 +83,7 @@ layout: default
     <p>
       These little bots are centered around their simple circuit design.
       We already have a basic circuit laid out for you that you can 
-      modify to your liking! Want more/differnt sensors? Another motor 
+      modify to your liking! Want more/different sensors? Another motor 
       for an arm? You can do it!
     
     </p>
@@ -103,10 +103,10 @@ layout: default
       <h2>CAD Modeling and 3D Printing.</h2>
     </header>
     <p>
-      Once you got your bot spinning it's wheels, how do you hold it all together? 
-      You got to design your own enclosure using CAD! Some of our workshops will be 
+      Once you got your bot spinning its wheels, how do you hold it all together? 
+      You'll design your own enclosure using CAD! Some of our workshops will be 
       dedicated to learning Fusion 360 and the quirks of 3D printing. Once it's all 
-      done we will 3D print the parts for you so you can asseemble your bot.
+      done, we will 3D print the parts for you so you can asseemble your bot.
     </p>
 
     <p>
