deploy: 1af1ccb8835da5015574c6a7d6abd0109f49622f

--- a/sumobot.html
+++ b/sumobot.html
@@ -133,7 +133,7 @@
     <p>
       These little bots are centered around their simple circuit design.
       We already have a basic circuit laid out for you that you can 
-      modify to your liking! Want more/differnt sensors? Another motor 
+      modify to your liking! Want more/different sensors? Another motor 
       for an arm? You can do it!
     
     </p>
@@ -153,10 +153,10 @@
       <h2>CAD Modeling and 3D Printing.</h2>
     </header>
     <p>
-      Once you got your bot spinning it's wheels, how do you hold it all together? 
-      You got to design your own enclosure using CAD! Some of our workshops will be 
+      Once you got your bot spinning its wheels, how do you hold it all together? 
+      You'll design your own enclosure using CAD! Some of our workshops will be 
       dedicated to learning Fusion 360 and the quirks of 3D printing. Once it's all 
-      done we will 3D print the parts for you so you can asseemble your bot.
+      done, we will 3D print the parts for you so you can asseemble your bot.
     </p>
 
     <p>
