--- a/sumobot.html
+++ b/sumobot.html
@@ -111,8 +111,7 @@
       <h2>Programming With Arduinos!</h2>
     </header>
     <p>
-      To power these little cute robots into the champions that they will be
-      during the competition, we need to give their microporcessors instructions
+      To make these little robots think, we need to give their microporcessors instructions
       to follow. With the power of Arudino C, they shall gains the brains to win
       the competition. Never programmed? Don't worry, our workshops are designed to 
       get you started from nothing!
@@ -133,7 +132,7 @@
     <p>
       These little bots are centered around their simple circuit design.
       We already have a basic circuit laid out for you that you can 
-      modify to your liking! Want more/different sensors? Another motor 
+      modify to your liking! Want more or different sensors? Another motor 
       for an arm? You can do it!
     
     </p>
