fixes to comply with html5 validator

--- a/website/slack.html
+++ b/website/slack.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="Refresh"
-      content="0; url='https://yorkurobotics.slack.com/signup#'"
+      content="0; url=https://yorkurobotics.slack.com/signup#"
     />
     <title>YURS | Slack</title>
-<!--     <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
+    <!--     <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
     <meta http-equiv="X-Content-Type-Options" content="nosniff" />
     <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" /> -->
   </head>
