--- a/website/404.html
+++ b/website/404.html
@@ -1,25 +1,18 @@
 ---
+title: YURS | 404
 permalink: /404.html
 layout: default
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+<section id="page-not-found" class="main style1 dark fullscreen">
+  <div class="dark-layer"></div>
+  <div class="content">
+    <header>
+      <h2>404 Page Not Found</h2>
+    </header>
+    <p>Hmmm...There dosen't seem to be anything here.</p>
+    <footer>
+      <a href="#sumobot-point-1" class="button style2 down">More</a>
+    </footer>
+  </div>
+</section>
