--- a/website/zoom.html
+++ b/website/zoom.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="Refresh"
-      content="0; url='https://yorku.zoom.us/j/3076421459?pwd=MFcwR1B5U0pGWi85OFA3a3FvTGdZQT09'"
+      content="0; url=https://yorku.zoom.us/j/3076421459?pwd=MFcwR1B5U0pGWi85OFA3a3FvTGdZQT09"
     />
     <title>YURS | Zoom</title>
-<!--     <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
+    <!--     <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
     <meta http-equiv="X-Content-Type-Options" content="nosniff" />
     <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" /> -->
   </head>
