deploy: 753e3db1f1092b7ca9b885bb56ff58b630545f2f

--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <title></title>
+  <title>YURS | 404</title>
   <meta charset="utf-8" />
   <meta
     name="viewport"
@@ -53,26 +53,18 @@
     </ul>
   </nav>
 </header>
- <style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+ <section id="page-not-found" class="main style1 dark fullscreen">
+  <div class="dark-layer"></div>
+  <div class="content">
+    <header>
+      <h2>404 Page Not Found</h2>
+    </header>
+    <p>Hmmm...There dosen't seem to be anything here.</p>
+    <footer>
+      <a href="#sumobot-point-1" class="button style2 down">More</a>
+    </footer>
+  </div>
+</section>
  <footer id="footer">
   <!-- Icons -->
   <ul class="icons">
