--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <iframe
         class="iframeVideo"
         src="https://www.youtube.com/embed/3IPfEFFCeAA"
-        frameborder="0"
+        style="border: 0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen
       ></iframe>
