--- a/website/join.html
+++ b/website/join.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="Refresh"
-      content="0; url=https://forms.gle/iQss3FENRCGWn1iu7"
+      content="0; url=https://docs.google.com/forms/d/e/1FAIpQLSd1oRZdrjBmtBOjA2vT1gTIIqACMGjYXuliuFiseT4tnCbGEg/viewform?usp=sf_link"
     />
     <title>YURS | Join</title>
     <!--     <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
