deploy: 5ad3379251f2b193a453bfca0b4076371886f05b

--- a/zoom.html
+++ b/zoom.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      http-equiv="Refresh"
-      content="0; url=https://yorku.zoom.us/j/3076421459?pwd=MFcwR1B5U0pGWi85OFA3a3FvTGdZQT09"
-    />
-    <title>YURS | Zoom</title>
-    <!--     <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
-    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
-    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" /> -->
-  </head>
-  <body></body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="Refresh" content="0; url=https://yorku.zoom.us/j/3076421459?pwd=MFcwR1B5U0pGWi85OFA3a3FvTGdZQT09"><title>YURS | Zoom</title></head><body></body></html>
