--- a/join.html
+++ b/join.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      http-equiv="Refresh"
-      content="0; url=https://forms.gle/iQss3FENRCGWn1iu7"
-    />
-    <title>YURS | Join</title>
-    <!--     <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
-    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
-    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" /> -->
-  </head>
-  <body></body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="Refresh" content="0; url=https://docs.google.com/forms/d/e/1FAIpQLSd1oRZdrjBmtBOjA2vT1gTIIqACMGjYXuliuFiseT4tnCbGEg/viewform?usp=sf_link"><title>YURS | Join</title></head><body></body></html>
