--- a/sumobot.html
+++ b/sumobot.html
@@ -1,220 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-  <title>YURS | Sumobot Team</title>
-  <meta charset="utf-8" />
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1, user-scalable=no"
-  />
-<!--   <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
-  <meta http-equiv="X-Content-Type-Options" content="nosniff" /> -->
-<!--   <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" /> -->
-
-  <link rel="stylesheet" href="assets/css/main.min.css" />
-  <noscript
-    ><link rel="stylesheet" href="assets/css/noscript.min.css"
-  /></noscript>
-  <link rel="shortcut icon" href="assets/img/logo-short.ico" />
-</head>
-
-  <body class="is-preload">
-    <header id="header">
-  <div class="brand">
-    <img id="logo" src="assets/img/logo-short.png" alt="" />
-    <h1>York University Robotics Society</h1>
-  </div>
-
-  <nav>
-    <div class="hamburger">
-      <div class="line"></div>
-      <div class="line"></div>
-      <div class="line"></div>
-    </div>
-    <ul class="nav-links">
-      <li class="nav-link">
-        <a href="/">Home</a>
-      </li>
-      <li class="nav-link" id="video-nav-link">
-        <a href="/#video">Promotional Video</a>
-      </li>
-      <li class="nav-link">
-        <a href="/join">Join Us</a>
-      </li>
-      <li class="nav-link">
-        <a href="/#about">About Us</a>
-      </li>
-      <li class="nav-link">
-        <a href="/#teams">Teams</a>
-      </li>
-      <!-- <li class="nav-link">
-        <a href="https://yorkurobotics.com/index.html#contact">Contact</a>
-      </li> -->
-    </ul>
-  </nav>
-</header>
- <!-- Intro -->
-<section id="intro-sumobot" class="main style1 dark fullscreen">
-  <div class="dark-layer"></div>
-  <div class="content">
-    <header>
-      <h2>SUMOBOT TEAM</h2>
-    </header>
-    <p>
-      Never worked with robots before? Don't know how to get started? Rover Team is a bit daunting?
-      This might be the right place! Come
-      <a href="/join">join us now</a> and find out how to build your first (or second) robot!
-    </p>
-    <footer>
-      <a href="#sumobot-point-1" class="button style2 down">More</a>
-    </footer>
-  </div>
-</section>
-
-<!-- One -->
-<section id="sumobot-point-1" class="main style2 right dark fullscreen">
-  <div class="content box style2">
-    <header>
-      <h2>Everyone's Welcome!</h2>
-    </header>
-    <p>
-      The Sumobot team engineer small, autonomous robots designed to track down
-      and push an opposing robot out of a ring. Competing in the annual McMaster
-      Sumobot Competition, the Sumobot Team is a great place to work in a
-      close-knit team to build up your skills in all areas of robotics. The team
-      is open to all students, regardless of experience and major.
-    </p>
-    <p>
-      <a href="/join">Join today</a> and discover your new
-      passion for robotics!
-    </p>
-  </div>
-  <a href="#sumobot-point-2" class="button style2 down anchored">Next</a>
-</section>
-
-<section id="sumobot-point-2" class="main style2 left dark fullscreen">
-  <div class="content box style2">
-    <header>
-      <h2>Winner Winner!</h2>
-    </header>
-    <p>
-      In 2018, York University earned first place at the McMaster Sumobot
-      Competition. Our little sumo wrestlers are a force to be reckoned with!
-    </p>
-  </div>
-  <a href="#sumobot-point-3" class="button style2 down anchored">Next</a>
-</section>
-
-<section id="sumobot-point-3" class="main style2 right dark fullscreen">
-  <div class="content box style2">
-    <header>
-      <h2>Programming With Arduinos!</h2>
-    </header>
-    <p>
-      To make these little robots think, we need to give their microporcessors instructions
-      to follow. With the power of Arudino C, they shall gains the brains to win
-      the competition. Never programmed? Don't worry, our workshops are designed to 
-      get you started from nothing!
-    </p>
-    <p>
-      <a href="/join">Join us now</a> to gives these little
-      bots the brains of Skynet (disguised in the body of a tiny bot).
-    </p>
-  </div>
-  <a href="#sumobot-point-4" class="button style2 down anchored">Next</a>
-</section>
-
-<section id="sumobot-point-4" class="main style2 left dark fullscreen">
-  <div class="content box style2">
-    <header>
-      <h2>Circuits! Circuit of life!</h2>
-    </header>
-    <p>
-      These little bots are centered around their simple circuit design.
-      We already have a basic circuit laid out for you that you can 
-      modify to your liking! Want more or different sensors? Another motor 
-      for an arm? You can do it!
-    
-    </p>
-
-    <p>
-      <a href="/join">Join us now</a> and hook up these 
-      bots into their Frankenstein potential!
-      <strong>IT'S ALIVE!</strong>
-    </p>
-  </div>
-  <a href="#sumobot-point-5" class="button style2 down anchored">Next</a>
-</section>
-
-<section id="sumobot-point-5" class="main style2 right dark fullscreen">
-  <div class="content box style2">
-    <header>
-      <h2>CAD Modeling and 3D Printing.</h2>
-    </header>
-    <p>
-      Once you got your bot spinning its wheels, how do you hold it all together? 
-      You'll design your own enclosure using CAD! Some of our workshops will be 
-      dedicated to learning Fusion 360 and the quirks of 3D printing. Once it's all 
-      done, we will 3D print the parts for you so you can asseemble your bot.
-    </p>
-
-    <p>
-      <a href="/join">Join us now</a> to build your next
-      <i>tiny</i> terrorizing bot.
-    </p>
-  </div>
-</section>
- <footer id="footer">
-  <!-- Icons -->
-  <ul class="icons">
-    <li>
-      <a href="https://twitter.com/yorkurobotics" class="icon brands fa-twitter"
-        ><span class="label">Twitter</span></a
-      >
-    </li>
-    <li>
-      <a href="https://www.facebook.com/yorkurobotics/" class="icon brands fa-facebook-f"
-        ><span class="label">Facebook</span></a
-      >
-    </li>
-    <li>
-      <a href="https://www.instagram.com/yorkurobotics" class="icon brands fa-instagram"
-        ><span class="label">Instagram</span></a
-      >
-    </li>
-    <li>
-      <a href="https://www.linkedin.com/company/yurs/" class="icon brands fa-linkedin-in"
-        ><span class="label">LinkedIn</span></a
-      >
-    </li>
-    <!-- <li>
-      <a href="#" class="icon brands fa-dribbble"
-        ><span class="label">Dribbble</span></a
-      >
-    </li>
-    <li>
-      <a href="#" class="icon brands fa-pinterest"
-        ><span class="label">Pinterest</span></a
-      >
-    </li> -->
-  </ul>
-
-  <!-- Menu -->
-  <ul class="menu">
-    <li>&copy; York University Robotics Society</li>
-    <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-  </ul>
-</footer>
- <!-- Scripts -->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.poptrox.min.js"></script>
-<script src="assets/js/jquery.scrolly.min.js"></script>
-<script src="assets/js/jquery.scrollex.min.js"></script>
-<script src="assets/js/browser.min.js"></script>
-<script src="assets/js/breakpoints.min.js"></script>
-<script src="assets/js/util.min.js"></script>
-<script src="assets/js/main.min.js"></script>
-<script src="assets/js/hamburger.min.js"></script>
-
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><title>YURS | Sumobot Team</title><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"><link rel="stylesheet" href="assets/css/main.min.css"><noscript><link rel="stylesheet" href="assets/css/noscript.min.css"></noscript><link rel="shortcut icon" href="assets/img/logo-short.ico"></head><body class="is-preload"><header id="header"><div class="brand"><img id="logo" src="assets/img/logo-short.png" alt=""><h1>York University Robotics Society</h1></div><nav><div class="hamburger"><div class="line"></div><div class="line"></div><div class="line"></div></div><ul class="nav-links"><li class="nav-link"><a href="/">Home</a></li><li class="nav-link" id="video-nav-link"><a href="/#video">Promotional Video</a></li><li class="nav-link"><a href="/join">Join Us</a></li><li class="nav-link"><a href="/#about">About Us</a></li><li class="nav-link"><a href="/#teams">Teams</a></li></ul></nav></header><section id="intro-sumobot" class="main style1 dark fullscreen"><div class="dark-layer"></div><div class="content"><header><h2>SUMOBOT TEAM</h2></header><p>Never worked with robots before? Don't know how to get started? Rover Team is a bit daunting? This might be the right place! Come <a href="/join">join us now</a> and find out how to build your first (or second) robot!</p><footer><a href="#sumobot-point-1" class="button style2 down">More</a></footer></div></section><section id="sumobot-point-1" class="main style2 right dark fullscreen"><div class="content box style2"><header><h2>Everyone's Welcome!</h2></header><p>The Sumobot team engineer small, autonomous robots designed to track down and push an opposing robot out of a ring. Competing in the annual McMaster Sumobot Competition, the Sumobot Team is a great place to work in a close-knit team to build up your skills in all areas of robotics. The team is open to all students, regardless of experience and major.</p><p><a href="/join">Join today</a> and discover your new passion for robotics!</p></div><a href="#sumobot-point-2" class="button style2 down anchored">Next</a></section><section id="sumobot-point-2" class="main style2 left dark fullscreen"><div class="content box style2"><header><h2>Winner Winner!</h2></header><p>In 2018, York University earned first place at the McMaster Sumobot Competition. Our little sumo wrestlers are a force to be reckoned with!</p></div><a href="#sumobot-point-3" class="button style2 down anchored">Next</a></section><section id="sumobot-point-3" class="main style2 right dark fullscreen"><div class="content box style2"><header><h2>Programming With Arduinos!</h2></header><p>To make these little robots think, we need to give their microporcessors instructions to follow. With the power of Arudino C, they shall gains the brains to win the competition. Never programmed? Don't worry, our workshops are designed to get you started from nothing!</p><p><a href="/join">Join us now</a> to gives these little bots the brains of Skynet (disguised in the body of a tiny bot).</p></div><a href="#sumobot-point-4" class="button style2 down anchored">Next</a></section><section id="sumobot-point-4" class="main style2 left dark fullscreen"><div class="content box style2"><header><h2>Circuits! Circuit of life!</h2></header><p>These little bots are centered around their simple circuit design. We already have a basic circuit laid out for you that you can modify to your liking! Want more or different sensors? Another motor for an arm? You can do it!</p><p><a href="/join">Join us now</a> and hook up these bots into their Frankenstein potential! <strong>IT'S ALIVE!</strong></p></div><a href="#sumobot-point-5" class="button style2 down anchored">Next</a></section><section id="sumobot-point-5" class="main style2 right dark fullscreen"><div class="content box style2"><header><h2>CAD Modeling and 3D Printing.</h2></header><p>Once you got your bot spinning its wheels, how do you hold it all together? You'll design your own enclosure using CAD! Some of our workshops will be dedicated to learning Fusion 360 and the quirks of 3D printing. Once it's all done, we will 3D print the parts for you so you can asseemble your bot.</p><p><a href="/join">Join us now</a> to build your next <i>tiny</i> terrorizing bot.</p></div></section><footer id="footer"><ul class="icons"><li><a href="https://twitter.com/yorkurobotics" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li><li><a href="https://www.facebook.com/yorkurobotics/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li><li><a href="https://www.instagram.com/yorkurobotics" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li><li><a href="https://www.linkedin.com/company/yurs/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li></ul><ul class="menu"><li>&copy; York University Robotics Society</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul></footer><script src="assets/js/jquery.min.js"></script><script src="assets/js/jquery.poptrox.min.js"></script><script src="assets/js/jquery.scrolly.min.js"></script><script src="assets/js/jquery.scrollex.min.js"></script><script src="assets/js/browser.min.js"></script><script src="assets/js/breakpoints.min.js"></script><script src="assets/js/util.min.js"></script><script src="assets/js/main.min.js"></script><script src="assets/js/hamburger.min.js"></script></body></html>
