--- a/website/fusion360.html
+++ b/website/fusion360.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="Refresh"
-      content="0; url=mymy4365.autodesk360.com"
+      content="0; url=https://mymy4365.autodesk360.com/"
     />
     <title>YURS | Slack</title>
     <!--     <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
