--- a/website/fusion360.html
+++ b/website/fusion360.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="Refresh"
-      content="0; url=https://mymy4365.autodesk360.com/"
+      content="0; url=https://accounts.autodesk.com/Authentication/LogOn?ReturnUrl=%2Fauthorize%3Fuitype%3Dnewui%26realm%3D%252A.autodesk360.com%26ctx%3Da360pro%26AuthKey%3D8fac7fe7-1506-4143-bae7-24a37399d6f8%26regurl%3Dhttps%25253A%25252F%25252Fmymy4365.autodesk360.com%25252Flogin%25252Fsignup%25253Fproduct%25253Dfusion&uitype=newui#username"
     />
-    <title>YURS | Slack</title>
+    <title>YURS | Fusion 360</title>
     <!--     <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
     <meta http-equiv="X-Content-Type-Options" content="nosniff" />
     <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" /> -->
