--- a/fusion360.html
+++ b/fusion360.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="Refresh" content="0; url=https://www.mymy4365.autodesk360.com/"><title>YURS | Slack</title></head><body></body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="Refresh" content="0; url=https://mymy4365.autodesk360.com/"><title>YURS | Slack</title></head><body></body></html>
