Add sponsors section

--- a/website/index.html
+++ b/website/index.html
@@ -78,3 +78,36 @@ layout: default
     </div>
   </div>
 </section>
+
+<section id="sponsors">
+  <!-- <div class="content"> -->
+    <header>
+      <h2>Thanks to our generous sponsors!</h2>
+    </header>
+    <div class="platinum">
+      <a href="/lassonde">
+        <img src="assets/img/sponsers/lassonde.jpg" alt="" class="sponsor">
+      </a>
+      <a href="/yorku">
+        <img src="assets/img/sponsers/yorku.png" alt="" height="100px" class="sponsor">
+      </a>
+      <a href="/protocase">
+        <img src="assets/img/sponsers/protocase.png" alt="" class="sponsor">
+      </a>
+    </div>
+    <div class="gold"></div>
+    <div class="silver">
+      <a href="/servocity">
+        <img src="assets/img/sponsers/servocity.png" alt="" height="100px" class="sponsor">
+      </a>
+    </div>
+    <div class="bronze">
+      <a href="/elegoo">
+        <img src="assets/img/sponsers/elegoo.jpg" alt="" class="sponsor">
+      </a>
+      <a href="/yfs">
+        <img src="assets/img/sponsers/yfs.jpeg" alt="" class="sponsor">
+      </a>
+    </div>
+  <!-- </div> -->
+</section>
