--- a/website/index.html
+++ b/website/index.html
@@ -98,7 +98,7 @@ layout: default
     <div class="gold"></div>
     <div class="silver">
       <a href="/servocity">
-        <img src="assets/img/sponsers/servocity.png" alt="" height="100px" class="sponsor">
+        <img src="assets/img/sponsers/servocity.png" alt="" class="sponsor">
       </a>
     </div>
     <div class="bronze">
