--- a/website/index.html
+++ b/website/index.html
@@ -89,7 +89,7 @@ layout: default
         <img src="assets/img/sponsers/lassonde.jpg" alt="" class="sponsor">
       </a>
       <a href="/yorku">
-        <img src="assets/img/sponsers/yorku.png" alt="" height="100px" class="sponsor">
+        <img src="assets/img/sponsers/yorku.png" alt="" class="sponsor">
       </a>
       <a href="/protocase">
         <img src="assets/img/sponsers/protocase.png" alt="" class="sponsor">
