--- a/eecszoom.html
+++ b/eecszoom.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="Refresh" content="0; url=https://yorku.zoom.us/j/8657684154"><title>YURS | EECS Zoom</title></head></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="Refresh" content="0; url=https://yorku.zoom.us/j/7466721300?pwd=cE9QZ0o4RHo5ZWtXM0ZMSVNDYWFHdz09"><title>YURS | EECS Zoom</title></head></html>
