--- a/website/index.html
+++ b/website/index.html
@@ -24,7 +24,7 @@ layout: default
 <section id="video" class="main style2 right dark fullscreen">
   <div class="content box style2">
     <header>
-      <h2><small class="new">new!</small> CHECK OUT OUR PROMOTIONAL VIDEO!</h2>
+      <h2>CHECK OUT OUR PROMOTIONAL VIDEO!</h2>
     </header>
     <p>
       <iframe
