fixed spelling mistake

--- a/website/elections.html
+++ b/website/elections.html
@@ -17,7 +17,7 @@ layout: default
       <a href="#election-point-2">Treasurer</a>,
       <a href="#election-point-3">Vice President of Events and Outreach</a>,
       <a href="#election-point-4"
-        >Vice President of Sponserships and Fundraising</a
+        >Vice President of Sponsorships and Fundraising</a
       >, <a href="#election-point-5">Rover Team Lead</a>,
       <a href="#election-point-5">Sumobot Team Lead</a>,
       <a href="#election-point-6">Social Media Director</a>, and
