make transition faster

--- a/website/elections.html
+++ b/website/elections.html
@@ -30,9 +30,9 @@ layout: default
       <strong>11:59 pm April 24</strong>. You can nominate yourself or someone
       else by emailing the YURS email (<a href="mailto:yorkurobotics@gmail.com"
         >yorkurobotics@gmail.com</a
-      >) AND the Chief Returning Officer, (
-      <a href="mailto:tdau@my.yorku.ca">tdau@my.yorku.ca</a>). You must be an
-      active member to nominate yourself.
+      >) AND the Chief Returning Officer, (<a href="mailto:tdau@my.yorku.ca"
+        >tdau@my.yorku.ca</a
+      >). You must be an active member to nominate yourself.
 
       <br />
       <br />
