--- a/website/rover.html
+++ b/website/rover.html
@@ -1,23 +1,23 @@
 ---
-title: YURS | Elections 2021-2022
+title: YURS | Rover Team
 layout: default
 ---
 
 <!-- Intro -->
-<section id="intro-elections" class="main style1 dark fullscreen">
+<section id="intro-rover" class="main style1 dark fullscreen">
   <div class="dark-layer"></div>
   <div class="content">
     <header>
-      <h2>ELECTIONS 2021-2022</h2>
+      <h2>ROVER TEAM</h2>
     </header>
-
-    <p>It's election season! We are hiring for the following roles:</p>
 
     <p>
       Made out of 4 teams: Software, Science, Electrical and Mechanical. Pick
       your team (or pick multiple) and work to get the next rover onto mars.
       Scroll down to learn more or
       <a href="{{ site.join_now_link }}">click here to join us!</a>.
+      <!-- Come -->
+      <!-- <a href="#">join us</a> now and pick your poison! -->
     </p>
     <footer>
       <a href="#rover-point-1" class="button style2 down">More</a>
@@ -29,21 +29,22 @@ layout: default
 <section id="rover-point-1" class="main style2 right dark fullscreen">
   <div class="content box style2">
     <header>
-      <h2>President</h2>
+      <h2>Software Team</h2>
     </header>
 
     <p>
-      The President is the Chief Executive Officer of YURS and is the most
-      powerful position on the Executive Council. The President represents YURS
-      and shall be responsible for establishing and preserving contacts between
-      YURS and other organizations. The President presides at all meetings of
-      the members of the organization, as well as the Executive Council. The
-      President shall see to the general and active management of the affairs of
-      the organization. The President is also responsible for ensuring that the
-      rules and bylaws of YURS are carried into effect. The President has the
-      power to interpret the Constitution as written. The President is a signing
-      officer, with the power to approve or reject the proposed budget.
+      The Software team writes the software in ROS, C++, and Python that
+      controls the rover that is teleoperated from up to 1km away! Some tasks
+      include Computer Vision for object detection or Inverse Kinematics control
+      system for the arm for the Equipment Servicing task.
     </p>
+
+    <!-- <p>
+      The software team essentially controls the rover. As competition
+      objectives change, the team heavily relies on the software subteam to
+      ensure the rover performs perfectly during competitions in a mars
+      environment.
+    </p> -->
     <p>
       <a href="{{ site.join_now_link }}">Join now</a> and show us your pro
       coding skills!
@@ -56,15 +57,13 @@ layout: default
 <section id="rover-point-2" class="main style2 left dark fullscreen">
   <div class="content box style2">
     <header>
-      <h2>Treasurer</h2>
+      <h2>Science Team</h2>
     </header>
     <p>
-      The Treasurer maintains the funds of YURS and creates accounts of
-      expenditures and revenues. The Treasurer is responsible for ensuring our
-      bank account is maintained and usable. The Treasurer is in charge of
-      reimbursements (together with the President). The Treasurer also has a
-      role in creating the budget for YURS. The Treasurer is a signing officer
-      of YURS.
+      Interested in conducting scientific research and experiments? Ever wonder
+      how biology, chemistry and engineering can all come together and help each
+      other in the pursuit for knowledge, academic growth, and of course- in
+      competitions? Then this is the subteam for you!
     </p>
 
     <p>
@@ -78,21 +77,14 @@ layout: default
 <section id="rover-point-3" class="main style2 right dark fullscreen">
   <div class="content box style2">
     <header>
-      <h2>Vice President, Events and Outreach</h2>
+      <h2>Electrical Team</h2>
     </header>
 
     <p>
-      The VPEO would attend to the planning and scheduling of events for YURS.
-      YURS has a constitutional objective of outreach, and to that end, the VPEO
-      can schedule workshops, tours, school visits, and various other activities
-      as deemed necessary to that end. The VPEO shall be responsible for
-      establishing, maintaining, and preserving contacts between YURS and such
-      organizations as may be contacted from time to time for the purpose of
-      events or outreach activities. Coming off a year where little outreach was
-      possible, the VPEO will have a chance to make a big impact as we hopefully
-      return to a "normal" school year. This position is a full executive
-      position, which means that there is a considerable role in club affairs,
-      though it does not have signing authority.
+      The Electrical team is responsible for designing the circuits and all
+      hardware used on the rover! Some tasks include the power distribution and
+      motor control system, and Radio direction finding to find a distressed
+      astronaut in the Search and Rescue task.
     </p>
     <p>
       <a href="{{ site.join_now_link }}">Join us now</a> for an electrifying
