--- a/website/elections.html
+++ b/website/elections.html
@@ -4,7 +4,7 @@ layout: default
 ---
 
 <!-- Intro -->
-<section id="intro-elections" class="main style1 dark fullscreen">
+<section id="intro-elections" class="main style1 dark fullscreen election">
   <div class="dark-layer"></div>
   <div class="content">
     <header>
@@ -48,7 +48,10 @@ layout: default
 </section>
 
 <!-- One -->
-<section id="election-point-1" class="main style2 right dark fullscreen">
+<section
+  id="election-point-1"
+  class="main style2 right dark fullscreen election"
+>
   <div class="content box style2">
     <header>
       <h2>President</h2>
@@ -77,7 +80,10 @@ layout: default
 </section>
 
 <!-- Two -->
-<section id="election-point-2" class="main style2 left dark fullscreen">
+<section
+  id="election-point-2"
+  class="main style2 left dark fullscreen election"
+>
   <div class="content box style2">
     <header>
       <h2>Treasurer</h2>
@@ -101,7 +107,10 @@ layout: default
   <!-- <a href="#election-point-3" class="button style2 down anchored">Next</a> -->
 </section>
 
-<section id="election-point-3" class="main style2 right dark fullscreen">
+<section
+  id="election-point-3"
+  class="main style2 right dark fullscreen election"
+>
   <div class="content box style2">
     <header>
       <h2>Vice President of Events and Outreach</h2>
@@ -131,7 +140,10 @@ layout: default
   <!-- <a href="#election-point-4" class="button style2 down anchored">Next</a> -->
 </section>
 
-<section id="election-point-4" class="main style2 left dark fullscreen">
+<section
+  id="election-point-4"
+  class="main style2 left dark fullscreen election"
+>
   <div class="content box style2">
     <header>
       <h2>Vice President of Sponsorships and Fundraising</h2>
@@ -158,7 +170,10 @@ layout: default
   <!-- <a href="#election-point-5" class="button style2 down anchored">Next</a> -->
 </section>
 
-<section id="election-point-5" class="main style2 right dark fullscreen">
+<section
+  id="election-point-5"
+  class="main style2 right dark fullscreen election"
+>
   <div class="content box style2">
     <header>
       <h2>Team Leads</h2>
@@ -194,7 +209,10 @@ layout: default
   <!-- <a href="#election-point-6" class="button style2 down anchored">Next</a> -->
 </section>
 
-<section id="election-point-6" class="main style2 left dark fullscreen">
+<section
+  id="election-point-6"
+  class="main style2 left dark fullscreen election"
+>
   <div class="content box style2">
     <header>
       <h2>Social Media Director</h2>
@@ -220,7 +238,10 @@ layout: default
   <!-- <a href="#election-point-7" class="button style2 down anchored">Next</a> -->
 </section>
 
-<section id="election-point-7" class="main style2 right dark fullscreen">
+<section
+  id="election-point-7"
+  class="main style2 right dark fullscreen election"
+>
   <div class="content box style2">
     <header>
       <h2>Creative Director</h2>
