--- a/join.html
+++ b/join.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="Refresh" content="0; url=https://docs.google.com/forms/d/e/1FAIpQLSd1oRZdrjBmtBOjA2vT1gTIIqACMGjYXuliuFiseT4tnCbGEg/viewform?usp=sf_link"><title>YURS | Join Us</title></head></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="Refresh" content="0; url=https://discord.gg/tE2kHkD8TF"><title>YURS | Join Us</title></head></html>
