--- a/promovideo.html
+++ b/promovideo.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="Refresh" content="0; url=https://www.youtube.com/watch?v=3IPfEFFCeAA"><title>YURS | Promo Video</title></head></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="Refresh" content="0; url=https://www.youtube.com/watch?v=4tx1A3J4d18"><title>YURS | Promo Video</title></head></html>
