--- a/slack.html
+++ b/slack.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="Refresh" content="0; url=https://discord.gg/tE2kHkD8TF"><title>YURS | Discord</title></head></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="Refresh" content="0; url=https://discord.gg/hQmKnwCQSk"><title>YURS | Discord</title></head></html>
